# flowtron

./: config.json  config_Flowtron-LibriTTS-2p3k_Fine-Tuned.json  pyproject.toml  requirements.txt
filelists/: filelist_train.txt  filelist_val.txt
models/: flowtron_libritts2k.pt
tacotron2/: requirements.txt
tacotron2/models/: tacotron2_statedict.pt
tacotron2/waveglow/: requirements.txt
tacotron2/waveglow/models/: waveglow_256channels_ljs_v2.pt
tacotron2/waveglow/tacotron2/: requirements.txt
