[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "flowtron"
authors = [
    {name = "Rafael Valle"},
    {name = "Kevin Shih"},
    {name = "Ryan Prenger"},
    {name = "Bryan Catanzaro"}
]
description = "Flowtron: an Autoregressive Flow-based Network for Text-to-Mel-spectrogram Synthesis"
readme = "README.md"
license = {text = "Apache License"}
dependencies = [
  "matplotlib==3.3.2",
  "numpy==1.19.2",
  "inflect==4.1.0",
  "numba==0.48",
  "librosa==0.6.3",
  "scipy==1.5.2",
  "Unidecode==1.0.22",
  "pillow",
  "tensorboard"
]
dynamic = ["version"]
